fix(gms): treat MCP construction failures as per-item outcomes
Stop fail-the-batch on RequestContext. Soft-skip invalid MCPs in mixed
batches, error when the batch would be empty, and FMCP construction
skips on the consumer path so poison pills are visible.

Fixes #19086

Co-authored-by: Cursor <cursoragent@cursor.com>